--- a/courses/MLEfreiS7/TD3.html
+++ b/courses/MLEfreiS7/TD3.html
@@ -60,6 +60,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./TD4.html" rel="next">
 <link href="./TD2.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -152,6 +153,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <div class="sidebar-item-container"> 
   <a href="./TD3.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Lab3: Decision Trees and Random Forests</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./TD4.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Lab4: Starting with Neural Networks</span></a>
   </div>
 </li>
     </ul>
@@ -1325,6 +1332,9 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
+      <a href="./TD4.html" class="pagination-link">
+        <span class="nav-page-text">Lab4: Starting with Neural Networks</span> <i class="bi bi-arrow-right-short"></i>
+      </a>
   </div>
 </nav>
 </div> <!-- /content -->
