--- a/courses/MLEfreiS7/index.html
+++ b/courses/MLEfreiS7/index.html
@@ -138,6 +138,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Lab3: Decision Trees and Random Forests</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./TD4.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Lab4: Starting with Neural Networks</span></a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
