--- a/courses/MDSEfreiS7/appendix-Exams.html
+++ b/courses/MDSEfreiS7/appendix-Exams.html
@@ -164,6 +164,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Sheet 6</span></span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./td7.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Sheet 7</span></span></a>
+  </div>
+</li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
             <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">
@@ -228,6 +234,7 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#partial-2022-2023" id="toc-partial-2022-2023" class="nav-link active" data-scroll-target="#partial-2022-2023"><span class="header-section-number">G.1</span> Partial 2022-2023</a></li>
+  <li><a href="#final-exam-2022-2023" id="toc-final-exam-2022-2023" class="nav-link" data-scroll-target="#final-exam-2022-2023"><span class="header-section-number">G.2</span> Final Exam 2022-2023</a></li>
   </ul>
 </nav>
     </div>
@@ -527,6 +534,136 @@ variable $X$.
 
     -   Compute $P(  \overline{X}> 1.2)$.
 ::: -->
+</section>
+<section id="final-exam-2022-2023" class="level2" data-number="G.2">
+<h2 data-number="G.2" class="anchored" data-anchor-id="final-exam-2022-2023"><span class="header-section-number">G.2</span> Final Exam 2022-2023</h2>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Exercise 1
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><em>Let <span class="math inline">\(X\)</span> be the duration of use (in hours) of a computer terminal during a working day.</em></p>
+<ol type="1">
+<li><p><em>Suppose that <span class="math inline">\(X\)</span> follows a Normal distribution <span class="math inline">\(\mathcal{N}(4,2)\)</span>.</em></p>
+<ol type="1">
+<li><p><em>Calculate <span class="math inline">\(P(X&lt;3)\)</span>.</em></p></li>
+<li><p><em>Calculate the number <span class="math inline">\(x_0\)</span> such that, for <span class="math inline">\(90\%\)</span> of the days, <span class="math inline">\(X\)</span> is less than <span class="math inline">\(x_0\)</span>.</em></p></li>
+</ol></li>
+<li><p><em>Suppose that <span class="math inline">\(X\)</span> follows a Uniform distribution on <span class="math inline">\([0;8]\)</span>.</em></p>
+<ol type="1">
+<li><p><em>Determine the density function of <span class="math inline">\(Y=e^X\)</span>.</em></p></li>
+<li><p><em>Calculate the expected value of <span class="math inline">\(Y^2\)</span>.</em></p></li>
+</ol></li>
+</ol>
+</div>
+</div>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Exercise 2
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><em>Some birds fly after making a few jumps on the ground. It is assumed that the number <span class="math inline">\(X\)</span> of jumps can be modeled by a Pascal (Geometric) distribution on <span class="math inline">\(\mathbb{N}^*\)</span>:</em></p>
+<p><em><span class="math display">\[P(X=x)= p(1-p)^{x-1} \quad x \geq 1\]</span></em></p>
+<p><em>For <span class="math inline">\(n=130\)</span> birds of this type, we collected the following data:</em></p>
+<div class="center">
+<table class="table">
+<thead>
+<tr class="header">
+<th style="text-align: left;"><strong><em>Number of jumps <span class="math inline">\(x\)</span></em></strong></th>
+<th style="text-align: left;"><em>1</em></th>
+<th style="text-align: left;"><em>2</em></th>
+<th style="text-align: left;"><em>3</em></th>
+<th style="text-align: left;"><em>4</em></th>
+<th style="text-align: left;"><em>5</em></th>
+<th style="text-align: left;"><em>6</em></th>
+<th style="text-align: left;"><em>7</em></th>
+<th style="text-align: left;"><em>8</em></th>
+<th style="text-align: left;"><em>9</em></th>
+<th style="text-align: left;"><em>10</em></th>
+<th style="text-align: left;"><em>11</em></th>
+<th style="text-align: left;"><em>12</em></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><strong><em>Occurence</em></strong></td>
+<td style="text-align: left;"><em>48</em></td>
+<td style="text-align: left;"><em>31</em></td>
+<td style="text-align: left;"><em>20</em></td>
+<td style="text-align: left;"><em>9</em></td>
+<td style="text-align: left;"><em>6</em></td>
+<td style="text-align: left;"><em>5</em></td>
+<td style="text-align: left;"><em>4</em></td>
+<td style="text-align: left;"><em>2</em></td>
+<td style="text-align: left;"><em>1</em></td>
+<td style="text-align: left;"><em>1</em></td>
+<td style="text-align: left;"><em>2</em></td>
+<td style="text-align: left;"><em>1</em></td>
+</tr>
+</tbody>
+</table>
+</div>
+<ol type="1">
+<li><p><em>What is the Maximum Likelihood Estimator (MLE) of <span class="math inline">\(p\)</span>?</em></p></li>
+<li><p><em>Calculate a value of this estimator using the collected data.</em></p></li>
+</ol>
+</div>
+</div>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Exercise 3
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><em>Nine pallets of bricks of the same manufacture were weighed. We obtained an average of 500 kg and a variance of 16.</em></p>
+<p><em>We admit that the random variable "Weight of a pallet of bricks" follows a Normal distribution of expectation <span class="math inline">\(\mu\)</span> and variance <span class="math inline">\(\sigma^2\)</span>.</em></p>
+<ol type="1">
+<li><p><em>Give an unbiased estimators of <span class="math inline">\(\mu\)</span> and <span class="math inline">\(\sigma^2\)</span>.</em></p></li>
+<li><p><em>Construct a confidence interval of <span class="math inline">\(\mu\)</span> of <span class="math inline">\(90\%\)</span> confidence.</em></p></li>
+<li><p><em>Now suppose that we know the variance, which is given by the constructor <span class="math inline">\(\sigma^2\)</span> = 25. Recalculate the <span class="math inline">\(90\%\)</span> confidence interval of <span class="math inline">\(\mu\)</span>.</em></p></li>
+<li><p><em>In this case, what confidence level to choose if we want to have a confidence interval of length 10.</em></p></li>
+</ol>
+</div>
+</div>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Exercise 4
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><em>A car manufacturer called <span class="math inline">\(A\)</span> decides to market <span class="math inline">\(100\%\)</span> electric cars. He claims that the average range (autonomy) of its new model is 200 km. The European standard considers a vehicle to be "compliant" if its autonomy is greater than 175 km. A competitor <span class="math inline">\(B\)</span> would like to verify, on average, the autonomy of manufacturer <span class="math inline">\(A\)</span>’s cars. He rents 16 cars. Let take <span class="math inline">\(X\)</span> the random variable corresponding to the range of each tested car. We will suppose that <span class="math inline">\(X\)</span> follows a Normal distribution of mean <span class="math inline">\(\mu\)</span> and variance <span class="math inline">\(\sigma^2\)</span>. With the sample data, the manufacturer obtains a mean range of 190 km and an unbiased estimate of the variance of 9.</em></p>
+<ol type="1">
+<li><p><em>Describe the random experiment, the population, and the studied random variable.</em></p></li>
+<li><p><em>What does the parameter <span class="math inline">\(\mu\)</span> represent? Give an estimator and then an estimation of <span class="math inline">\(\mu\)</span>.</em></p></li>
+<li><p><em>Test the hypothesis that the average range is 200 km with confidence <span class="math inline">\(95\%\)</span>.</em></p></li>
+<li><p><em>Explain how to answer the previous question with a two-sided confidence interval for <span class="math inline">\(\mu\)</span>.</em></p></li>
+<li><p><em>Can we say, with a <span class="math inline">\(2.5\%\)</span> risk of error, that the average range of this model is strictly over 175 km..</em></p></li>
+<li><p><em>Give a confidence interval at <span class="math inline">\(10\%\)</span> for the variance <span class="math inline">\(\sigma^2\)</span>.</em></p>
+<p><em>The proportion of cars tested with a range of more than 175 km in this sample is of 0.88.</em></p></li>
+<li><p><em>Describe the new random variable studied <span class="math inline">\(Y\)</span>. What is its distribution?</em></p></li>
+<li><p><em>Give a point estimate of the proportion <span class="math inline">\(p\)</span> of cars that are compliant to the European standard.</em></p></li>
+<li><p><em>Assuming that the sample is large enough to apply the central limit theorem, can we say, with a <span class="math inline">\(5\%\)</span> risk of error, that the proportion <span class="math inline">\(p\)</span> of compliant cars in the entire production is strictly greater than 0.90?</em></p></li>
+</ol>
+</div>
+</div>
 
 
 </section>
