--- a/courses/MDSEfreiS7/td7.html
+++ b/courses/MDSEfreiS7/td7.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Mathematics for Data Science - Appendix F — distribution calculator</title>
+<title>Mathematics for Data Science - 7&nbsp; Exercises 7</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,8 +30,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./appendix-Exams.html" rel="next">
-<link href="./appendix-fisher.html" rel="prev">
+<link href="./appendix-normal1.html" rel="next">
+<link href="./td6.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -81,7 +81,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./appendix-normal1.html">Appendices</a></li><li class="breadcrumb-item"><a href="./appendix-calculator.html"><span class="chapter-number">F</span>&nbsp; <span class="chapter-title">distribution calculator</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./td7.html"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Sheet 7</span></a></li></ol></nav>
       <a class="flex-grow-1" role="button" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="" onclick="window.quartoOpenSearch();">
@@ -167,7 +167,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./td7.html" class="sidebar-item-text sidebar-link">
+  <a href="./td7.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Sheet 7</span></span></a>
   </div>
 </li>
@@ -212,7 +212,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./appendix-calculator.html" class="sidebar-item-text sidebar-link active">
+  <a href="./appendix-calculator.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text"><span class="chapter-number">F</span>&nbsp; <span class="chapter-title">distribution calculator</span></span></a>
   </div>
 </li>
@@ -237,7 +237,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Appendix F — distribution calculator</h1>
+<h1 class="title"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Exercises 7</span></h1>
 </div>
 
 
@@ -252,10 +252,293 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p align="center">
-<iframe id="inlineFrameExample" title="" width="700" height="1400" src="https://gallery.shinyapps.io/dist_calc/">
-</iframe>
-</p>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercise 7.1 </strong></span>A computer scientist has developed an algorithm to generate pseudo-random integers uniformly over the interval <span class="math inline">\([0,9]\)</span>. He codes the algorithm and generates <span class="math inline">\(1000\)</span> pseudo-random numbers. Data on the frequency of occurrence of each digit from <span class="math inline">\(0\)</span> to <span class="math inline">\(9\)</span> are shown in the following table.</p>
+
+<table class="table table-striped table-bordered" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+Generated number
+</th>
+<th style="text-align:right;">
+Observed occurence, <span class="math inline">\(N_i\)</span>
+</th>
+<th style="text-align:right;">
+Observed frequency, <span class="math inline">\(O_i\)</span>
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+0
+</td>
+<td style="text-align:right;">
+94
+</td>
+<td style="text-align:right;">
+0.094
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1
+</td>
+<td style="text-align:right;">
+93
+</td>
+<td style="text-align:right;">
+0.093
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2
+</td>
+<td style="text-align:right;">
+112
+</td>
+<td style="text-align:right;">
+0.112
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+3
+</td>
+<td style="text-align:right;">
+101
+</td>
+<td style="text-align:right;">
+0.101
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+4
+</td>
+<td style="text-align:right;">
+104
+</td>
+<td style="text-align:right;">
+0.104
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+5
+</td>
+<td style="text-align:right;">
+95
+</td>
+<td style="text-align:right;">
+0.095
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+6
+</td>
+<td style="text-align:right;">
+100
+</td>
+<td style="text-align:right;">
+0.100
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+7
+</td>
+<td style="text-align:right;">
+99
+</td>
+<td style="text-align:right;">
+0.099
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+8
+</td>
+<td style="text-align:right;">
+108
+</td>
+<td style="text-align:right;">
+0.108
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+9
+</td>
+<td style="text-align:right;">
+94
+</td>
+<td style="text-align:right;">
+0.094
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<span class="math inline">\(n\)</span>
+</td>
+<td style="text-align:right;">
+1000
+</td>
+<td style="text-align:right;">
+1.00
+</td>
+</tr>
+</tbody>
+
+</table>
+<p>Does the random number generator works correctly at the <span class="math inline">\(5\%\)</span> threshold?</p>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercise 7.2 </strong></span>We wish to test the hypothesis that the number of defects on printed circuit boards follows a Poisson distribution. We collect a random sample of <span class="math inline">\(n=60\)</span> printed circuit boards and observe the number of defects. The following data are obtained:</p>
+
+<table class="table table-striped table-bordered" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+Defects
+</th>
+<th style="text-align:right;">
+Observed frequency
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+32
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+15
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+9
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
+</tbody>
+
+</table>
+<p>Can we say that the number of defects follows a Poisson distribution? (<strong>Remark</strong>: the parameter <span class="math inline">\(\lambda\)</span> of the Poisson distribution is to be estimated)</p>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercise 7.3 </strong></span>A company has to choose one of three pension plans. Management wants to know if the preference for a plan is independent of job category at the <span class="math inline">\(5\%\)</span> threshold. The following table shows the opinions of a sample of <span class="math inline">\(500\)</span> employees.</p>
+
+<table class="table table-striped table-bordered" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="border-bottom:hidden" colspan="1">
+</th>
+<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+<span class="math inline">\(X_2 =\)</span> Pension Plan
+</div>
+</th>
+<th style="border-bottom:hidden" colspan="1">
+</th>
+</tr>
+<tr>
+<th style="text-align:left;">
+<span class="math inline">\(X_1 =\)</span> Job categories
+</th>
+<th style="text-align:left;">
+1
+</th>
+<th style="text-align:left;">
+2
+</th>
+<th style="text-align:left;">
+3
+</th>
+<th style="text-align:left;">
+Total
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+1: Executive employees
+</td>
+<td style="text-align:left;">
+160
+</td>
+<td style="text-align:left;">
+140
+</td>
+<td style="text-align:left;">
+40
+</td>
+<td style="text-align:left;">
+340
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2: Employees paid by hour
+</td>
+<td style="text-align:left;">
+40
+</td>
+<td style="text-align:left;">
+60
+</td>
+<td style="text-align:left;">
+60
+</td>
+<td style="text-align:left;">
+160
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Total
+</td>
+<td style="text-align:left;">
+200
+</td>
+<td style="text-align:left;">
+200
+</td>
+<td style="text-align:left;">
+100
+</td>
+<td style="text-align:left;">
+500
+</td>
+</tr>
+</tbody>
+
+</table>
+<p>Test the independence between job category and plan preference.</p>
+</div>
 
 
 
@@ -611,13 +894,13 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./appendix-fisher.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">E</span>&nbsp; <span class="chapter-title">Tables de la loi de Fisher <span class="math inline">\(F\)</span></span></span>
+      <a href="./td6.html" class="pagination-link">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Sheet 6</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./appendix-Exams.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">G</span>&nbsp; <span class="chapter-title">Previous exams</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./appendix-normal1.html" class="pagination-link">
+        <span class="nav-page-text"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Standard Normal Distribution Table 1</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
